python/testData/quickFixes/PyAddImportQuickFixTest/osPathFunctions/main.py
<error descr="Unresolved reference 'commonpath'">c<caret>ommonpath</error>